test/libyul/yulSyntaxTests/builtin_function_literal.yul
{
  datasize(x,1)
}
// ----
// TypeError 7000: (4-12): Function "datasize" expects 1 arguments but got 2.
// TypeError 9114: (4-12): Function expects direct literals as arguments.
// DeclarationError 8198: (13-14): Identifier "x" not found.
